aws/template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Parameters": {

    "KeyName": {
      "Description": "Name of an existing ECZ KeyPair to enable SSH access to the instance",
      "Type": "AWS::EC2::KeyPair::KeyName",
      "ConstraintDescription": " Must be the name of an existing EC2 KeyPair"
    },
    "SSHLocation": {
      "Description": "Lockdown SSH access to the bastion host (default can be accessed from anywhere)",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "0.0.0.0/0"
    }
  },
  "Metadata": {
    "AWS::CloudFormation::Designer": {
      "a3db41b9-31cc-4620-97af-82f6dd7c730d": {
        "size": {
          "width": 320,
          "height": 190
        },
        "position": {
          "x": 100,
          "y": 216
        },
        "z": 1,
        "embeds": [
          "f73b2bf0-3450-4548-b2a3-f1e8c79b0f6a"
        ],
        "iscontainedinside": [
          "1b162cc9-713a-43d5-bb71-5948f1e66f96",
          "1b162cc9-713a-43d5-bb71-5948f1e66f96",
          "1b162cc9-713a-43d5-bb71-5948f1e66f96",
          "1b162cc9-713a-43d5-bb71-5948f1e66f96"
        ]
      },
      "f73b2bf0-3450-4548-b2a3-f1e8c79b0f6a": {
        "size": {
          "width": 60,
          "height": 60
        },
        "position": {
          "x": 170,
          "y": 280
        },
        "z": 2,
        "parent": "a3db41b9-31cc-4620-97af-82f6dd7c730d",
        "embeds": [],
        "iscontainedinside": [
          "a3db41b9-31cc-4620-97af-82f6dd7c730d",
          "a3db41b9-31cc-4620-97af-82f6dd7c730d",
          "a3db41b9-31cc-4620-97af-82f6dd7c730d",
          "a3db41b9-31cc-4620-97af-82f6dd7c730d"
        ]
      },
      "c0c516b3-c04e-4263-8a3f-6a1c93c79ca6": {
        "size": {
          "width": 60,
          "height": 60
        },
        "position": {
          "x": 184.21996872793412,
          "y": 443.0646685384729
        },
        "z": 0
      }
    }
  },
  "Resources": {
    "WmVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.1.0/28",
        "EnableDnsSupport": false,
        "EnableDnsHostnames": true,
        "InstanceTenancy": "default"
      }
    },
    "WmUspSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "WmVPC"
        },
        "MapPublicIpOnLaunch": true,
        "CidrBlock": "10.0.1.0/28"
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "a3db41b9-31cc-4620-97af-82f6dd7c730d"
        }
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {},
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "f3415fb8-695a-4e0a-ba97-c39c0a20bc28"
        }
      }
    },
    "EC2VPCG241ES": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        },
        "VpcId": {
          "Ref": "WmVPC"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "2a3b2356-b364-49e2-ae8e-d7bda33254a9"
        }
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "WmVPC"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "51ce7de6-1758-442c-904e-ace0298eeb68"
        }
      },
      "DependsOn": [
        "EC2VPCG241ES"
      ]
    },
    "PublicRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "GatewayId": {
          "Ref": "InternetGateway"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "186a91f5-32ce-464b-93ca-7909ae7101d4"
        }
      },
      "DependsOn": [
        "EC2VPCG241ES"
      ]
    },
    "ManagementServer": {
      "Type": "AWS::EC2::Instance",
      "Properties": {

        "KeyName": {
          "Ref": "KeyName"
        },
        "ImageId": "ami-337be65c",
        "InstanceType": "t2.micro",
        "NetworkInterfaces": [{
          "DeviceIndex": "0",
          "AssociatePublicIpAddress": "true",
          "DeleteOnTermination": "true",
          "SubnetId": {
            "Ref": "WmUspSubnet"
          },
          "GroupSet": [{
            "Ref": "MySecurityGroup"
          }]
        }]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "f73b2bf0-3450-4548-b2a3-f1e8c79b0f6a"
        }
      },
      "DependsOn": [
        "PublicRoute"
      ]
    },
    "MySecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "WmVPC"
        },
        "GroupDescription": "Allow access from HTTP and SSH traffic",
        "SecurityGroupIngress": [{
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": {
              "Ref": "SSHLocation"
            }
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "c0c516b3-c04e-4263-8a3f-6a1c93c79ca6"
        }
      }
    }
  },

  "Outputs": {
    "Instance": {
      "Value": {
        "Fn::GetAtt": ["ManagementServer", "PublicDnsName"]
      },
      "Description": "DNS name of newly created EC2 instance"
    }
  }
}
